---------------------------------------------------------------------------------------------------
Version: 1.1.1
Date: ???
  Bugfixes:
    - Fixed selected weapon slot being reset to slot 1 when spidertron is reactivated
    - Fixed crash when a vehicle containing a player is destroyed
---------------------------------------------------------------------------------------------------
Version: 1.1.0
Date: 21 December 2020
  Features:
    - Shift + Q to select remote connected to the spidertron that you are hovering over
    - Added thumbnail
---------------------------------------------------------------------------------------------------
Version: 1.0.1
Date: 12 December 2020
  Features:
    - 1.1 compatibility
---------------------------------------------------------------------------------------------------
Version: 1.0.0
Date: 12 December 2020
  Features:
    - Initial release
    - Enter a train or other vehicle without leaving the spidertron
    - Quick toggle between engineer and spidertron
    - Spill spidertron items on ground upon death